<resources>
    <string name="app_name">ToBuy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Icon is a Shopping Cart entitled \"To-Buy\"</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
</resources>