<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/logo"
        android:contentDescription="@string/logo"
        android:layout_width="228dp"
        android:layout_height="277dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:src="@drawable/logo" />

    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/password"
        android:autofillHints="password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:layout_marginBottom="60dp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
    
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:padding="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:padding="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginEnd="10dp" />

    </LinearLayout>
</LinearLayout>